# simple_logs

./: .gitignore  CMakeLists.txt  README.md  logs.hpp  main.cpp
simple_logs/: logs.hpp
syslog/: SyslogBackend.cpp  SyslogBackend.hpp
tools/: colorize_logs
